<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PembukuanUMK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="transaksi_penjualan">Pilih Jenis Transaksi</string>
    <string name="pilih_barang">Pilih Barang</string>
    <string name="pilih_laporan">Pilih Jenis Laporan</string>





    
    
    <!-- Activity Titles -->
    <string name="HomeActivityTitle">Pembukuan UMK</string>
    <string name="FeedbackActivityTitle">Feedback</string>
    <string name="Profil_UMK">Profil UMK</string>
    <string name="Katalog_produk">Katalog Produk</string>
    <string name="Transaksi_penjualan">Transaksi Penjualan</string>
    <string name="Transaksi_lain">Transasksi Lain</string>
    <string name="Laporan">Laporan</string>
    <string name="TambahProduk">Tambah Produk</string>
    <string name="DetailProduk">Detil Produk</string>
    <string name="UbahDetailProduk">Ubah Detil Produk</string>

    <string-array name="jenis_transaksi_penjualan">
        <item>Transaksi Tunggal</item>
        <item>Transaksi Kolektif</item>
    </string-array>
    <string-array name="jenis_transaksi_lain">
        <item>Pembelian</item>
        <item>Tambah Modal</item>
        <item>Setor Uang Kas ke Bank</item>
        <item>Pengambilan Uang dari Bank ke Kas</item>
    </string-array>
    <string-array name="jenis_laporan">
        <item>Daftar Transaksi</item>
        <item>Laporan Keuangan</item>
        <item>Produk Unggulan</item>
    </string-array>
</resources>
